minor edit workshop description

--- a/index.org
+++ b/index.org
@@ -55,7 +55,7 @@ Most of our workshop time will focus on:
 
 ** No fee nor registration
 
-There is no fee nor registration for this event. Just show up with a laptop ready for the workshop (see below).
+There is no fee nor registration for this event. Simply join us with your laptop ready for the workshop (see below).
 
 ** Software requirements
 
