--- a/r_functional-programming_with-answers.org
+++ b/r_functional-programming_with-answers.org
@@ -6,12 +6,62 @@
 
 #+PROPERTY: header-args:R :session R:purrr :eval no :exports code :tangle yes :comments link
 
-#+TITLE:   Functional programming in R (with purrr)
+#+TITLE:   Functional programming in R (with /purrr/)
 #+DATE:	   {{{time(%B %d\, %Y)}}}
 #+AUTHOR:  Marie-Hélène Burle
 #+EMAIL:   msb2@sfu.ca
 
-* Introduction
+* Introduction: an example
+
+#+BEGIN_VERBATIM
+Create a named vector with the maximum values of all the variables in the mtcars dataset.
+#+END_VERBATIM
+
+#+BEGIN_VERSE
+Copy-paste method:
+#+END_VERSE
+
+Don't do this! It is a hard-coding practice prone to error. Not to mention, very tedious...
+
+#+BEGIN_SRC R
+setNames(
+  c(max(mtcars[1]),
+    max(mtcars[2]),
+    max(mtcars[3]),
+    max(mtcars[4]),
+    max(mtcars[5]),
+    max(mtcars[6]),
+    max(mtcars[7]),
+    max(mtcars[8]),
+    max(mtcars[9]),
+    max(mtcars[10]),
+    max(mtcars[11])
+    ),
+  names(mtcars)
+)
+#+END_SRC
+
+#+BEGIN_VERSE
+For loop method:
+#+END_VERSE
+
+#+BEGIN_SRC R
+max <- vector("double", ncol(mtcars))
+
+for (i in seq_along(mtcars)) {
+  max[[i]] <- max(mtcars[[i]])
+}
+
+setNames(max, names(mtcars))
+#+END_SRC
+
+#+BEGIN_VERSE
+Purrr method (yeah!):
+#+END_VERSE
+
+#+BEGIN_SRC R
+map_dbl(mtcars, max)
+#+END_SRC
 
 ** What is functional programming?
 
@@ -78,7 +128,6 @@ First, let's load the packages that we will use. It is always a good idea to wri
 #+BEGIN_SRC R
 library(tidyverse)   # we will use purrr and other core packages
 library(magrittr)    # we will use several types of pipes
-library(patchwork)   # this is a cool package to plot several graphs together
 #+END_SRC
 
 ** Create some fake banding data
@@ -86,7 +135,7 @@ library(patchwork)   # this is a cool package to plot several graphs together
 Let's create some imaginary bird banding data:
 
 #+BEGIN_SRC R
-banding <- data.frame(
+banding <- tibble(
   bird = paste0("bird", 1:50),
   sex = sample(c("F", "M"), 50, replace = T),
   population = sample(LETTERS[1:3], 50, replace = T),
@@ -97,7 +146,16 @@ banding <- data.frame(
 
 banding
 
-banding %>% str()
+banding[4:6] %>% map(mean)
+banding[4:6] %>% map_dbl(mean)
+
+## for loop here to print for each pop
+
+## purrr method
+banding %>%
+  split(.$population) %>%
+  map(~ ggplot(., aes(tarsus, mass)) + geom_point())
+
 #+END_SRC
 
 ** Modify: modify elements of a list
@@ -431,7 +489,7 @@ We will use different src_R[:eval no]{map} (or src_R[:eval no]{walk}, if we want
 
 Results are returned predictably and consistently, which is [[https://blog.rstudio.com/2016/01/06/purrr-0-2-0/][not the case]] of src_R[:eval no]{sapply()}.
 
-*As Jenny Bryan [[https://speakerdeck.com/jennybc/data-rectangling][said it nicely]]:
+*As Jenny Bryan [[https://speakerdeck.com/jennybc/data-rectangling][said nicely]]:
 
 #+BEGIN_QUOTE
 "src_R[:eval no]{walk()} can be thought of as src_R[:eval no]{map_nothing()}
