add workshop location

--- a/index.org
+++ b/index.org
@@ -51,7 +51,7 @@ Most of our workshop time will focus on:
 
 *Date:* Thursday 23
 *Time:* 8pm-10pm
-*Place:* TBA (look at the on-line schedule)
+*Place:* Vancouver Convention Centre, Rooms 116 & 117
 
 ** No fee nor registration
 
